--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,12 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>LATEST</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.6.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
