--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,11 @@
 			<version>LATEST</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
