Adds Gradle, Spring boot, liquibase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/gamepro100
-jdbc.username = root
-jdbc.password =
-hibernate.dialect = org.hibernate.dialect.MySQLDialect
-hibernate.show_sql = true
-hibernate.format_sql = true
-hibernate.globally_quoted_identifiers = true
+spring.datasource.url=jdbc:mysql://localhost:3306/gamepro100?nullNamePatternMatchesAll=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=none
+
+liquibase.change-log=classpath:/db/changelog/changelog.xml
