--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,8 @@
-node_modules
-
-# Created by .ignore support plugin (hsz.mobi)
-### JetBrains template
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
-
 *.iml
-
-## Directory-based project format:
 .idea/
-
-## File-based project format:
-*.ipr
-*.iws
-
-## Plugin-specific files:
-
-# IntelliJ
+.gradle/
 /out/
 *.class
 /lessons/*/out/
+/tmp/
+/target/
