--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/gamepro100?nullNamePatternMatchesAll=true
+spring.datasource.url=jdbc:mysql://localhost:3306/gamepro100_user?nullNamePatternMatchesAll=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,4 +9,4 @@ spring.jpa.hibernate.ddl-auto=none
 
 liquibase.change-log=classpath:/db/changelog/changelog.xml
 
-server.port=8082
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
