user service refactor

--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -9,4 +9,6 @@ spring.jpa.hibernate.ddl-auto=none
 
 liquibase.change-log=classpath:/db/changelog/changelog.xml
 
+server.port=8082
+
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
