--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'GamePro100'
 include 'lesson-service'
 include 'user-service'
+include 'gateway-service'
+include 'task-executor-service'
 
