--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@
 /tmp/
 /target/
 /classes/
+/build/
+/gateway-service/build
+/lesson-service/build
+/task-executor-service/build
+/task-executor-service/answers
+/user-service/build
