--- a/build.gradle
+++ b/build.gradle
@@ -40,12 +40,14 @@ bootRepackage {
     excludeDevtools = true
 }
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '3.1'
+}
 
 lombok {
     version = '1.16.8'
     sha256 = "fe32b29b7b33eb2b19866cbc5345c59c9984a6036cc396856a04c0d09f99ea68"
 }
-
 tasks.withType(JavaCompile) {
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
