--- a/task-executor-service/build.gradle
+++ b/task-executor-service/build.gradle
@@ -19,6 +19,7 @@ bootRepackage {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('commons-io:commons-io:2.5')
+    compile project(':service-client')
 
     testCompile ('com.google.code.gson:gson:2.6.2')
     testCompile ('org.springframework.boot:spring-boot-starter-test')
