--- a/service-client/build.gradle
+++ b/service-client/build.gradle
@@ -1,14 +1,16 @@
+plugins {
+    id 'java'
+    id 'io.franzbecker.gradle-lombok' version '1.6'
+}
 
 apply plugin: 'java'
 
-tasks.withType(JavaCompile) {
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
-}
-repositories {
-    mavenCentral()
-}
-
 dependencies {
+    compile 'org.springframework:spring-web:4.3.3.RELEASE'
+    compile group: 'commons-logging', name: 'commons-logging', version: '1.2'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.3'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.8.3'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.3'
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
