--- a/service-client/build.gradle
+++ b/service-client/build.gradle
@@ -13,4 +13,6 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.3'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+
 }
