--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,5 @@ include 'user-service'
 include 'gateway-service'
 include 'task-executor-service'
 include 'service-client'
+include 'result-service'
+
