--- a/lesson-service/src/main/resources/application.properties
+++ b/lesson-service/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
 
 liquibase.change-log=classpath:/db/changelog/changelog.xml
 
 server.port=8081
+
+#spring.profiles.active=prod
