--- a/result-service/src/main/resources/application.properties
+++ b/result-service/src/main/resources/application.properties
@@ -1,16 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/gamepro100_user?nullNamePatternMatchesAll=true
+spring.datasource.url=jdbc:mysql://localhost:3306/gamepro100_result?nullNamePatternMatchesAll=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
 
 liquibase.change-log=classpath:/db/changelog/changelog.xml
 
-server.port=8082
-
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+server.port=8084
 
 #spring.profiles.active=prod
