Services.md and gradle config

--- a/gateway-service/build.gradle
+++ b/gateway-service/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'io.franzbecker.gradle-lombok' version '1.6'
 }
 
-defaultTasks 'bootRun'
+apply plugin: 'spring-boot'
 
 springBoot {
     mainClass 'gateway.App'
