--- a/lesson-service/src/main/resources/application.properties
+++ b/lesson-service/src/main/resources/application.properties
@@ -10,4 +10,4 @@ liquibase.change-log=classpath:/db/changelog/changelog.xml
 
 server.port=8081
 
-#spring.profiles.active=prod
+spring.profiles.active=prod
