--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -13,4 +13,4 @@ server.port=8082
 
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
-#spring.profiles.active=prod
+spring.profiles.active=prod
