--- a/lesson-service/build.gradle
+++ b/lesson-service/build.gradle
@@ -5,20 +5,10 @@ plugins {
     id 'org.liquibase.gradle' version '1.2.1'
 }
 
-defaultTasks 'bootRun'
-
-bootRun {
-    addResources = true
-}
+apply plugin: 'spring-boot'
 
 springBoot {
     mainClass 'lesson.App'
-}
-
-bootRepackage {
-    mainClass 'lesson.App'
-    executable = true
-    excludeDevtools = true
 }
 
 dependencies {
