--- a/result-service/build.gradle
+++ b/result-service/build.gradle
@@ -5,16 +5,10 @@ plugins {
     id 'org.liquibase.gradle' version '1.2.1'
 }
 
-defaultTasks 'bootRun'
+apply plugin: 'spring-boot'
 
 springBoot {
     mainClass 'result.App'
-}
-
-bootRepackage {
-    mainClass 'result.App'
-    executable = true
-    excludeDevtools = true
 }
 
 dependencies {
