--- a/gateway-service/build.gradle
+++ b/gateway-service/build.gradle
@@ -11,7 +11,7 @@ springBoot {
 }
 
 dependencies {
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-zuul', version: '1.2.0.RELEASE'
+    compile('org.springframework.cloud:spring-cloud-starter-zuul:1.2.0.RELEASE')
     compile('org.springframework.boot:spring-boot-starter-web')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
