Authentication with tokens for user service

--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -14,3 +14,6 @@ server.port=8082
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 spring.profiles.active=prod
+
+token.key = dgf32kld23
+token.alive = 30
