--- a/result-service/src/main/resources/application.properties
+++ b/result-service/src/main/resources/application.properties
@@ -11,3 +11,6 @@ liquibase.change-log=classpath:/db/changelog/changelog.xml
 server.port=8084
 
 spring.profiles.active=prod
+
+
+token.key = dgf32kld23
