--- a/service-client/build.gradle
+++ b/service-client/build.gradle
@@ -6,7 +6,13 @@ plugins {
 apply plugin: 'java'
 
 dependencies {
+    compile('javax.servlet:javax.servlet-api:3.1.0')
+
     compile 'org.springframework:spring-web:4.3.3.RELEASE'
+    compile 'org.springframework.security:spring-security-core:4.2.3.RELEASE'
+    compile 'org.springframework.security:spring-security-web:4.2.3.RELEASE'
+    compile('io.jsonwebtoken:jjwt:0.7.0')
+
     compile group: 'commons-logging', name: 'commons-logging', version: '1.2'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.3'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.8.3'
